[gd_scene load_steps=22 format=3 uid="uid://dsppjvtfm0iqa"]

[ext_resource type="Script" uid="uid://cb4cmtxb2d70f" path="res://scenes/levels/base_level.gd" id="1_md458"]
[ext_resource type="PackedScene" uid="uid://dfon2ykx74oiy" path="res://scenes/components/action_button/action_button.tscn" id="2_uk53i"]
[ext_resource type="Theme" uid="uid://ci8nn6qjjfjll" path="res://assets/themes/base_button.tres" id="3_j7gcg"]
[ext_resource type="PackedScene" uid="uid://clindmg85x3ke" path="res://scenes/components/passive_generator/passive_generator.tscn" id="3_ukglk"]
[ext_resource type="Script" uid="uid://rbsh3slbuk14" path="res://scripts/production_system/production_system.gd" id="5_o1chu"]
[ext_resource type="Script" uid="uid://bsr8a66e1kq5u" path="res://scripts/production_rule/production_rule.gd" id="6_h4ce7"]
[ext_resource type="Resource" uid="uid://dc8uc3uafebqv" path="res://data/production_rules/loc_to_bug.tres" id="7_53c65"]
[ext_resource type="Resource" uid="uid://cdeh1ufdqyspy" path="res://data/production_rules/commit_loc_to_features.tres" id="8_43bxi"]
[ext_resource type="Resource" uid="uid://ch0336ogx401c" path="res://data/production_rules/ship_features_to_money.tres" id="9_j7gcg"]
[ext_resource type="PackedScene" uid="uid://cbbobv6d7781w" path="res://scenes/UI/resource_hud/resource_hud.tscn" id="11_qhwlw"]
[ext_resource type="PackedScene" uid="uid://cwojeee861rxk" path="res://scenes/UI/resource_hud/resource_row.tscn" id="12_0caop"]
[ext_resource type="Script" uid="uid://c5afa1dx0ix0o" path="res://scripts/progression/progression_manager.gd" id="13_prog"]
[ext_resource type="Script" uid="uid://dfqx0l3t0riih" path="res://scripts/progression/milestone.gd" id="14_mile"]
[ext_resource type="Resource" uid="uid://4gek2negs56h" path="res://data/milestones/reveal_bug_button.tres" id="15_m1"]
[ext_resource type="Resource" path="res://data/milestones/reveal_generator.tres" id="16_m2"]
[ext_resource type="Resource" path="res://data/milestones/reveal_commit_button.tres" id="17_m3"]
[ext_resource type="Resource" path="res://data/milestones/reveal_ship_button.tres" id="18_m4"]
[ext_resource type="PackedScene" path="res://scenes/UI/menu_bar/menu_bar.tscn" id="20_menu"]
[ext_resource type="PackedScene" path="res://scenes/UI/popup/popup_overlay.tscn" id="21_popup"]
[ext_resource type="PackedScene" path="res://scenes/background/programmer_scene.tscn" id="22_prog"]
[ext_resource type="PackedScene" path="res://scenes/UI/action_panel/action_panel.tscn" id="23_action"]

[node name="BaseLevel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_md458")

[node name="ProgrammerScene" parent="." instance=ExtResource("22_prog")]

[node name="ResourceLabel" type="Label" parent="."]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 16.0

[node name="ActionPanel" parent="." instance=ExtResource("23_action")]
layout_mode = 0
offset_left = 8.0
offset_top = 50.0
offset_right = 108.0
offset_bottom = 320.0

[node name="ActionButton" parent="ActionPanel/MarginContainer/ActionList" instance=ExtResource("2_uk53i")]
layout_mode = 2
action_id = "loc_button"
display_name = "Write Code"
unlock_cost = 0.0
unlocked_action = true

[node name="ActionButton2" parent="ActionPanel/MarginContainer/ActionList" instance=ExtResource("2_uk53i")]
layout_mode = 2
action_id = "bug_button"
display_name = "Fix Bug"
resource_type = 1
resource_per_click = 0.0
action_cost_type = 1
action_cost = 1.0
hidden_on_start = true

[node name="ActionButton3" parent="ActionPanel/MarginContainer/ActionList" instance=ExtResource("2_uk53i")]
layout_mode = 2
action_id = "commit_button"
display_name = "Commit"
unlock_cost = 50.0
resource_per_click = 0.0
action_cost = 50.0
hidden_on_start = true

[node name="ActionButton4" parent="ActionPanel/MarginContainer/ActionList" instance=ExtResource("2_uk53i")]
layout_mode = 2
action_id = "ship_button"
display_name = "Ship"
unlock_cost_type = 2
unlock_cost = 1.0
resource_per_click = 0.0
action_cost_type = 2
action_cost = 1.0
hidden_on_start = true

[node name="PassiveGenerator" parent="ActionPanel/MarginContainer/ActionList" instance=ExtResource("3_ukglk")]
layout_mode = 2
display_name = "Auto Coder"
hidden_on_start = true

[node name="ProductionSystem" type="Node" parent="."]
script = ExtResource("5_o1chu")
rules = Array[ExtResource("6_h4ce7")]([ExtResource("7_53c65"), ExtResource("8_43bxi"), ExtResource("9_j7gcg")])

[node name="ProgressionManager" type="Node" parent="."]
script = ExtResource("13_prog")
milestones = Array[ExtResource("14_mile")]([ExtResource("15_m1"), ExtResource("16_m2"), ExtResource("17_m3"), ExtResource("18_m4")])

[node name="UI" type="CanvasLayer" parent="."]

[node name="ResourceHUD" parent="UI" instance=ExtResource("11_qhwlw")]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_bottom = 80.0
grow_horizontal = 0
resource_row_scene = ExtResource("12_0caop")

[node name="ResetConfirmDialog" type="ConfirmationDialog" parent="UI"]
title = "Reset Progress"
initial_position = 1
size = Vector2i(300, 100)
theme = ExtResource("3_j7gcg")
ok_button_text = "Reset"
dialog_text = "Are you sure you want to reset all progress? This cannot be undone."

[node name="MenuBar" parent="UI" instance=ExtResource("20_menu")]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = -56.0
offset_right = 108.0
offset_bottom = -36.0
grow_vertical = 0

[node name="PopupOverlay" parent="." instance=ExtResource("21_popup")]
